# usos

./: .gitignore  Cargo.toml  justfile
src/: api.rs  client.rs  errors.rs  keys.rs  main.rs  util.rs
src/api/: auth.rs  errors.rs  oauth1.rs  reference.rs  scopes.rs
src/api/errors/: kind.rs  reason.rs  user_message.rs
src/api/types/: language.rs
usos/: Cargo.toml
usos-codegen/: Cargo.toml
usos-codegen/src/: cli.rs  errors.rs  generation.rs  main.rs  module_system.rs  reference.rs
usos-codegen/src/generation/: code.rs  endpoint.rs  traversal.rs
usos-core/: Cargo.toml
usos-core/src/: api.rs  client.rs  errors.rs  keys.rs  lib.rs  util.rs  webdriver.rs
usos-core/src/api/: auth.rs  errors.rs  faculties.rs  oauth1.rs  params.rs  reference.rs  scopes.rs  types.rs  util.rs
usos-core/src/api/errors/: kind.rs  reason.rs  user_message.rs
usos-core/src/api/faculties/: faculty.rs  search.rs
usos-core/src/api/reference/: method.rs  method_index.rs  module.rs  scopes.rs
usos-core/src/api/server_info/: consumer.rs  installation.rs  installations.rs  now.rs
usos-core/src/api/types/: language.rs  scopes.rs  time.rs
usos-core/src/keys/: generation.rs
usos-core/src/webdriver/: geckodriver.rs
usos/src/: calendar.rs  lib.rs  server.rs  server_info.rs
usos/src/faculties/: faculty.rs  search.rs
usos/src/reference/: method.rs  method_index.rs  module.rs  scopes.rs
usos/src/server/: installation.rs  installations.rs
usos/src/server_info/: consumer.rs  installation.rs  installations.rs  now.rs
