[package]
name = "usos-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
dotenvy = "0.15.7"
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
usos-core = { path = "../usos-core" }
