[package]
name = "usos-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
dotenvy = "0.15.7"
fantoccini = "0.21.1"
percent-encoding = "2.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
ring = "0.17.8"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_urlencoded = "0.7.1"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
rstest = "0.22.0"
