[package]
name = "usos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
usos-core = { path = "../usos-core" }
